--- a/config/urchin.conf
+++ b/config/urchin.conf
@@ -16,10 +16,10 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 # CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 # --- DISPLAY SETTINGS ---
-/*
+
 # enable nice view
-CONFIG_ZMK_DISPLAY=y
-*/
+# CONFIG_ZMK_DISPLAY=y
+
 # disable the WPM widget
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
 # display battery as n%
