--- a/config/urchin.conf
+++ b/config/urchin.conf
@@ -18,9 +18,9 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 # --- DISPLAY SETTINGS ---
 
 # enable nice view
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 
 # disable the WPM widget
-#CONFIG_ZMK_WIDGET_WPM_STATUS=n
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
 # display battery as n%
-#CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
