--- a/config/urchin.conf
+++ b/config/urchin.conf
@@ -22,5 +22,6 @@ CONFIG_ZMK_DISPLAY=y
 
 # disable the WPM widget
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 # display battery as n%
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
