--- a/config/urchin.conf
+++ b/config/urchin.conf
@@ -18,10 +18,13 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 # --- DISPLAY SETTINGS ---
 
 # enable nice view
-CONFIG_ZMK_DISPLAY=y
-
+/*CONFIG_ZMK_DISPLAY=y*/
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 # disable the WPM widget
-CONFIG_ZMK_WIDGET_WPM_STATUS=n
+/*ONFIG_ZMK_WIDGET_WPM_STATUS=n*/
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 # display battery as n%
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
