--- a/config/urchin.conf
+++ b/config/urchin.conf
@@ -1,6 +1,9 @@
 # increase bluetooth signal power
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
+# enabled soft off
+CONFIG_ZMK_PM_SOFT_OFF=y
+
 # enable deep sleep support
 CONFIG_ZMK_SLEEP=y
 
